3-Answer/kustomiz/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-org-service
spec:
  ingressClassName: nginx
  rules:
    - host: kustom.192-168-1-10.nip.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: myapp-service
                port:
                  number: 80
